# DrumMaker

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/drummaker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  drummaker.cpp
app/src/main/java/com/example/drummaker/: MainActivity.kt
app/src/main/java/com/example/drummaker/composable/: FolderScreen.kt  MainScreen.kt  NoteScreen.kt  OptionScreen.kt  PadScreen.kt  SliderScreen.kt  TestScreen.kt
app/src/main/java/com/example/drummaker/composable/popups/: BpmInputDialog.kt
app/src/main/java/com/example/drummaker/composable/reusable/: BPMButton.kt  ElevatedIconButton.kt  ElevatedTypeIcon.kt  IconButton.kt  InnerShadow.kt  PlaySoundButton.kt  SequencerButton.kt
app/src/main/java/com/example/drummaker/scripts/: AudioEngineJNI.kt  DrumViewModel.kt  JavaNativeInterface.kt  SoundScript.kt
app/src/main/java/com/example/drummaker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: arrow_down.xml  arrowup.xml  bass.xml  cymbals.xml  folder.xml  gear.xml  note.xml  plus.xml  polygon_1.xml  polygon_2.xml  polygon_left.xml  polygon_right.xml  rectangle.xml  sliders.xml  snare.xml  speaker.xml  squares_four.xml  triangle.xml  unknown.xml  xmlid_933_.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/example/drummaker/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
